[metadata]
name = random_line
version = 1.0.0
description = DNAnexus :: Test
author = Aleksandr Kravchenko
license = MIT
classifiers =
    Programming Language :: Python :: 3.11


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    random_line = random_line.random_line:main
    binary_search = binary_search.binary_search:main